# COMP6704-Group_17-Project

./: .gitignore  README.md  benchmark_all_lmcf.py  plot_benchmark_results.py  pyproject.toml
benchmark_results/: detailed_results.csv  summary_results.csv
src/column_generation/: README.md  __init__.py  benchmark.py  column_generation.py  data_models.py  lmcf_parser.py  main.py  master_problem.py  pricing_problem.py  utils.py
src/dual/: README.md  __init__.py  data_models.py  dual_decomp.py  dual_solver.py  main.py  parser.py  utils.py
src/interior_point/: IP.tex  README.md  main.py  requirements.txt
src/interior_point/lib/: __init__.py  dataset_parser.py  modeling.py  solvers.py
src/interior_point/samples/: sample.py  sample2.py
src/simplex/: README.md  __init__.py  data_models.py  main.py  main_sparse.py  parser.py  simplex_solver.py  utils.py
tests/LMCF/: LMCF_Instances.md  format.txt
tests/LMCF/GridDemands/: Cgd1.txt  Cgd2.txt  Cgd3.txt  Cgd4.txt  Cgd5.txt  Cgd6.txt  Cgd7.txt  Cgd8.txt  Cgd9.txt  Dgd1.txt  Dgd2.txt  Dgd3.txt  Dgd4.txt  Dgd5.txt  Dgd6.txt  Dgd7.txt  Dgd8.txt  Dgd9.txt
tests/LMCF/OtherDemands/: C148.txt  C22.txt  C904.txt  D148.txt  D22.txt  D904.txt
tests/LMCF/PlanarNetworks/: Cpl100.txt  Cpl150.txt  Cpl30.txt  Cpl50.txt  Cpl80.txt  Dpl100.txt  Dpl150.txt  Dpl30.txt  Dpl50.txt  Dpl80.txt
tests/LMCF/TrafficNetworks/: Cchica.txt  Csiou.txt  Cwin.txt  Dchica.txt  Dsiou.txt  Dwin.txt
