[project]
name = "comp6704"
version = "0.1.0"
description = "COMP 6704 course project for MCNF"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gurobipy>=12.0.3",
    "networkx>=3.4.2",
    "numpy>=2.2.6",
    "pulp>=3.3.0",
    "scipy>=1.15.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pandas>=2.0.0",
]
